# regin

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  conftest.py  conftest_support.py  pyproject.toml  requirements-router.txt  requirements.txt
.githooks/: pre-commit
.impeccable/: design.json
alembic/: README  env.py
cli/: app.py  deps.py  output.py  regin.py
config/: settings.example.json  settings.json
db/: schema.sql
docs/: agent-bridge-design.md  agent-memory-exemplars.md  agent-memory-structure-digest-proposal.md  agent-memory-task-scoped-recall.md  agent-rubric-system-survey.md  bridge-slash-autocomplete-design.md  grader-configurable-design.md  mobile-progress-card-design.md  rule-trigger-audit-2026-06-23.md  setup.md  topic-proposal-call-unification-design.md  trace-transcript-relationships-design.md
example/: send_to_user_mcp.py
frontend/: design-system.json  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
hook_manager/: README.md  __init__.py  __main__.py  config.py  core.py  custom_registry.example.py  e2e_smoke.sh  merge.py  migration_preview.py  registry.py  runner.py  settings.example.json
lib/: activity_log.py  audit.py  auth.py  db_migrate.py  db_rebuild.py  doctor.py  experiments.py  goal_feedback.py  goal_preflight.py  hook_plugin.py  logging_setup.py  mysql_db.py  prompt_templates.py  repo_config.py  search.py  session_probe.py  settings.py
regin-plugin/: README.md
scripts/: _seed_skill_experience_trace.py  ablate_pattern_router.py  backfill_exemplars.py  backfill_failure_agent_id.py  bridge_mvp.py  capture_fixtures.py  check_grit.sh  check_secrets.py  compare_agent_extension_recall.py  compare_recall_strategies.py  create_distribution_zip.sh  dom-measure.mjs  e2e_rule_trigger.py  gen-design-manifest.mjs  hook_payload_debug.py  import_proposals_to_orm.py  prune_claude_projects.py  purge_test_traces.py  regin-statusline  run_trace_tests.sh  setup.sh  verify_skill_experience_span.mjs
tests/: conftest.py  test_session_probe.py
web/: app.py  helpers.py  startup.py
website/: README.md  index.html  package-lock.json  (+1 more)
(+1279 files in other folders)
