[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "regin"
version = "0.1.0"
description = "Pattern reference system for AI Agents — syncs and indexes best-practice code patterns from configured source repos"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
    "PyJWT>=2.0",
    "PyMySQL>=1.0",
    # Framework layer (Phase A+). Installed up-front so that later
    # iterations can adopt each one without touching dependency wiring.
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "structlog>=24.1",
    "loguru>=0.7",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "radon>=6.0",
    "jsonschema>=4.0",
    "genson>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "factory-boy>=3.3",
]

[project.scripts]
regin = "cli.regin:main"

[tool.setuptools]
packages = [
    "cli", "cli.commands",
    "lib", "lib.orm", "lib.orm.models",
    "lib.patterns", "lib.skills", "lib.topics", "lib.trace", "lib.trace.trace_service",
    "lib.sync", "lib.tags", "lib.rules", "lib.tokens",
    "lib.utils", "lib.rule_engines", "lib.languages", "lib.providers",
    "lib.providers.claude", "lib.providers.codex", "lib.providers.generic",
    "web", "web.blueprints",
    "web.blueprints.trace", "web.blueprints.patterns",
    "web.blueprints.rules", "web.blueprints.topics",
    "hook_manager",
]
# Re-run `pip install -e .` when adding a new package path above.

[tool.pytest.ini_options]
testpaths = ["tests", "hook_manager/tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: end-to-end tests that boot Flask + Claude CLI via tmux",
    "eval: opt-in retrieval-quality evals — load 0.6B SkillRouter models against live regin.db",
]

[tool.coverage.run]
source = ["lib", "web", "cli"]
branch = false
omit = [
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1
